# Pano-DSO

./: CMakeLists.txt  README.md  make_project_debug.sh  make_project_release.sh
examples/: CMakeLists.txt  Pano_DatasetReader.h  run_dso_kitti.cc  run_dso_tum_mono.cc  run_panodso_multi_fisheye.cc  testsomething.cc
include/: Camera.h  Feature.h  Frame.h  NumTypes.h  Point.h  Settings.h
include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FeatureDetector.h  FullSystem.h  MinimalImage.h  PixelSelector2.h  Undistort.h
include/internal/: CalibHessian.h  FrameFramePrecalc.h  FrameHessian.h  GlobalFuncs.h  ImmaturePoint.h  PointHessian.h  RawResidualJacobian.h  ResidualProjections.h  Residuals.h
include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.h  MatrixAccumulators.h
src/: Frame.cc  Point.cc  Setting.cc
src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FeatureDetector.cc  FullSystem.cc  ImageRW_OpenCV.cc  PixelSelector2.cc  Undistort.cc
src/internal/: FrameFramePrecalc.cc  FrameHessian.cc  GlobalCalib.cc  ImmaturePoint.cc  PointHessian.cc  Residuals.cc
src/internal/OptimizationBackend/: AccumulatedSCHessian.cc  AccumulatedTopHessian.cc  EnergyFunctional.cc
